<resources>
    <string name="app_name">GoogleMaps&amp;Realm</string>
    <string name="title_activity_maps">Map</string>

    ////////////// Runtime Permission /////////////////////////

    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied. App will work with limited functionality</string>
    <string name="permission_message">App will work with limited functionality. This permission need to get current user location.
        Please go to settings and check permission or restart application to do this. </string>
    <string name="permission_title">Warning.</string>

    ///////////// MapsActivity  /////////////////////////
    <string name="marker_add_success">Marker successfully added</string>
    <string name="marker_add_error">Marker not added</string>

    ///////////// MapsActivity Menu /////////////////////////
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="terrain_type">Terrain</string>
    <string name="map_style">Map Style</string>
    <string name="night_style">Night</string>
    <string name="retro_style">Retro</string>
    <string name="standard_style">Standard</string>
    <string name="aubergine_style">Aubergine</string>
    <string name="dark_style">Dark</string>
    <string name="silver_style">Silver</string>

    ///////////////////// Dialogs ////////////////////////

    <string name="hint_title">Marker title</string>
    <string name="choose_marker_icon">Choose marker icon</string>
    <string name="new_marker_dialog_title">Add marker</string>
    <string name="marker_label">marker title</string>
    <string name="marker_coordinates">marker coordinates</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="default_marker_label">New Marker</string>

    /////////////////// InfoActivity /////////////////////

    <string name="save_marker">Save</string>
    <string name="delete_marker">Delete</string>
    <string name="marker_update_error">Marker Updating error</string>
    <string name="marker_delete_error">Marker Updating error</string>
    <string name="marker_delete_success">Marker was deleted</string>
    <string name="marker_update_success">Marker updated</string>


</resources>
