<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/marker_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_marker"
        />

    <EditText
        android:id="@+id/marker_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marker_icon"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:text="@string/marker_label"
        android:hint="@string/marker_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/marker_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marker_label"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/marker_coordinates"
        />

    <Button
        android:id="@+id/btn_save_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:text="@string/save_marker"
        />

    <Button
        android:id="@+id/btm_delete_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:text="@string/delete_marker"
        />
</RelativeLayout>